--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "agora-rtc-sdk-ng": "^4.1.1",
     "autoprefixer": "^9.8.5",
     "compression-webpack-plugin": "^4.0.0",
     "css-loader": "^3.6.0",
